removed application.yml from gitHub

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 !**/src/main/**/build/
 !**/src/main/**/resources/
 !**/src/test/**/build/
+/backend/src/main/resources/application.yml
 
 ### VS Code ###
 .vscode/
